--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,16 @@
 .App {
     background-color: #294d61;
     padding: 1rem;
-    width: 600px;
     height: 600px;
+    width: 600px;
     border-radius: 15px;
+    box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.7);
 }
+
+@media (max-width: 450px) {
+    .App {
+        width: 90%;
+        height: auto;
+        margin: 10px auto;
+    }
+  }
