--- a/src/Header.css
+++ b/src/Header.css
@@ -1,4 +1,11 @@
 .app-title {
-    text-align: center;
-    margin-bottom: 2rem;
+  text-align: center;
+  margin-bottom: 2rem;
+}
+
+@media (max-width: 450px) {
+  .app-title {
+    margin-bottom: 1rem;
+    font-size: 1.6em;
+  }
 }
