--- a/src/MainTable.css
+++ b/src/MainTable.css
@@ -3,7 +3,6 @@
   flex-direction: column;
   max-height: 375px;
   border-radius: 15px;
-  padding: 0.5em;
 }
 
 .record-form {
@@ -39,7 +38,7 @@
   transition: 0.4s;
 }
 
-.empty-row td{
+.empty-row td {
   text-transform: none;
   color: #05161a;
   font-weight: 500;
@@ -84,7 +83,6 @@ tbody button:hover {
   transition: 0.4s;
 }
 
-/* Estilo do modal */
 .custom-modal {
   position: fixed;
   top: 10px;
@@ -97,4 +95,21 @@ tbody button:hover {
   z-index: 1;
 }
 
+.custom-modal:focus {
+  outline: none;
+}
 
+@media (max-width: 450px) {
+  .record-form {
+    gap: 0.5em;
+    grid-template-columns: repeat(2, 48.5%);
+  }
+
+  .record-form button {
+    margin-bottom: 1rem;
+  }
+
+  tbody {
+    font-size: 0.8em;
+  }
+}
