--- a/src/MainTable.css
+++ b/src/MainTable.css
@@ -83,22 +83,6 @@ tbody button:hover {
   transition: 0.4s;
 }
 
-.custom-modal {
-  position: fixed;
-  top: 10px;
-  right: 20px;
-  background-color: #ffffff;
-  color: #05161a;
-  border-radius: 15px;
-  padding: 1em;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-}
-
-.custom-modal:focus {
-  outline: none;
-}
-
 @media (max-width: 450px) {
   .record-form {
     gap: 0.5em;
@@ -111,5 +95,9 @@ tbody button:hover {
 
   tbody {
     font-size: 0.8em;
+  }
+
+  thead {
+    font-size: 0.9em;
   }
 }
